--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^7.1.0
   pretty_qr_code: ^3.5.0
+  camera: ^0.11.3
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
